--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 	<!-- Update Your Title and Descriptions -->
 	<title>Infinimax Accelerate Free Trial</title>
-	<meta name="description" content="Insert your SEO description here">
+	<meta name="description" content="Insert SEO description here">
+
+	<link rel='icon' href='favicon.ico'>
 
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 	<meta content="black" name="apple-mobile-web-app-status-bar-style">
@@ -43,7 +45,7 @@
 		<div class="wrapper clearfix">
 			<div class="cta">
 				<h2 style="text-transform:uppercase;">Better Sex For FREE</h2>
-				<p><strong>Offer valid for a LIMITED TIME ONLY:</strong></p>
+				<p><strong>Free bottle of Accelerate for a LIMITED TIME:</strong></p>
 
 				<div id="first_countdown" style="position: relative; width: 100%; height: 50px;"></div>
 
